# tiny-rpc

./: CMakeLists.txt  记录.txt
example/callee/: friendservice.cc
lib/include/: logger.h
src/: CMakeLists.txt  logger.cc  rpcprovider.cc
src/include/: logger.h  rpcprovider.h
